objects/Box_API_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Id__c</fullName>
        <label>Enterprise Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Id__c</fullName>
        <label>Folder_Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JWT_Private_Key__c</fullName>
        <label>JWT Private Key</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JWT_Public_Key_Id__c</fullName>
        <label>JWT Public Key Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Box API Setting</label>
    <listViews>
        <fullName>New_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Base_URL__c</columns>
        <columns>Client_Id__c</columns>
        <columns>Client_Secret__c</columns>
        <columns>Enterprise_Id__c</columns>
        <columns>Folder_Id__c</columns>
        <columns>JWT_Private_Key__c</columns>
        <columns>JWT_Public_Key_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>New View</label>
    </listViews>
    <pluralLabel>Box API Settings</pluralLabel>
</CustomObject>